--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: 'Inter', sans-serif;
 }
 ul,ol,menu{
     list-style:none;
@@ -10,12 +11,34 @@ nav a{
     text-decoration: none;
     color: currentColor;
 }
+button{
+    background-color: currentColor;
+    border: none;
+    color: currentColor;
+}
+/* general button */
+.button{
+    background-color: transparent;
+    height: 40px;
+    /* border: 1px solid black; */
+    text-align: left;
+    margin-right: auto;
+    font-size: 16px;
+}
+.blue_button{
+    color: white;
+    background-color: rgb(0, 97, 255);
+}
+.hero_col-1 button{
+    padding: 5px;
+}
 header{
     min-height: 80px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-bottom: 1px solid black;
 }
 
 
@@ -41,4 +64,50 @@ nav{
    width: 100%;
    padding-right: 10px;
    padding-left: 10px;
+}
+
+/* section HERO */
+
+.hero{
+    padding-top: 90px;
+    padding-bottom: 25px;
+    background-color: rgb(180, 208, 231);
+}
+/* container */
+
+.container-large{
+    width: 1200px;
+    margin: 0 auto;
+}
+
+/* row */
+
+.hero_row{
+    display: flex;
+}
+.hero_col-1 p {
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+.hero_col-1{
+    width: 33%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    line-height: 1.6;
+   
+}
+
+.hero_title{
+    font-size: 55px;
+    font-weight: bold;
+    padding-bottom:50px
+}
+
+#down-arrow{
+    width: 69px;
+    height: 69px;
+    font-size: 68px;
 }
