--- a/css/app.css
+++ b/css/app.css
@@ -38,7 +38,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
 }
 
 
@@ -73,10 +73,17 @@ nav{
     padding-bottom: 25px;
     background-color: rgb(180, 208, 231);
 }
+
+
 /* container */
 
 .container-large{
     width: 1200px;
+    margin: 0 auto;
+}
+
+.container-small{
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -124,4 +131,18 @@ nav{
     width: 100%;
     position: absolute;
     top:0px;
+}
+
+/* section plane-business */
+.plane-business{
+    padding-top: 100px;
+}
+
+.container-small h2{
+    font-size: 40px;
+}
+
+.plane-row-card{
+    display: flex;
+    width: calc(100% / 3);
 }
