--- a/css/app.css
+++ b/css/app.css
@@ -29,6 +29,9 @@ button{
     color: white;
     background-color: rgb(0, 97, 255);
 }
+#button-padding{
+    padding: 0 20px;
+}
 .hero_col-1 button{
     padding: 5px;
 }
@@ -39,6 +42,9 @@ header{
     justify-content: center;
     align-items: center;
     /* border-bottom: 1px solid black; */
+}
+.plane_card header{
+    min-height: 40px;
 }
 
 
@@ -138,25 +144,43 @@ nav{
 .flex{
     display: flex;
 }
+.input{
+    padding: 60px;
+    font-size: 15px;
+    font-weight: lighter;
+    display: flex;
+    gap: 20px;
+}
+.container-small h2{
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold;
+}
 .plane-business{
     padding-top: 100px;
 }
 
-.container-small h2{
-    font-size: 40px;
-}
+.body_card h3{
+    font-size: 24px;
+    font-weight: bold;
 
+}
 .plane-row-card{
     display: flex;
     width: calc(100% / 3);
     flex-direction: column;
 }
 
+.plane-row_col{
+    border: 1px solid gray;
+}
+
 .plane_card main{
     
     flex-direction: column;
     gap: 30px;
-    padding-left: 30px;
+    padding: 0 20px;
+    padding-bottom: 150px;
 }
 
 
@@ -164,5 +188,24 @@ nav{
     flex-direction: column;
     justify-content: space-between;
     gap: 30px;
+    display: flex;
 
+}
+.title_card{
+    display: flex;
+    gap: 5px;
+}
+
+
+.body_card li{
+    gap: 20px;
+    display: flex;
+    padding: 15px;
+}
+
+.body_card{
+    padding-top: 60px;
+}
+.plane_card header{
+    border-bottom: 1px solid gray;
 }
