--- a/css/app.css
+++ b/css/app.css
@@ -229,4 +229,29 @@
         padding: 10px 16px;
     }
 
+    .section-3{
+        padding-bottom: 130px;
+    }
+
     /* sezione 4  */
+
+    .card_operazioni{
+        display: flex;
+        flex-direction: column;
+        flex-basis: calc(100% / 3);
+        padding: 18px;
+    }
+    .col_operazioni{
+        display: flex;
+    }
+    .header-card_operazioni{
+        display: flex;
+        flex-direction: column;
+    }
+    .img_operazioni{
+        padding-bottom: 10px;
+    }
+
+    .card_operazioni p{
+        margin-top: 30px;
+    }
