--- a/css/app.css
+++ b/css/app.css
@@ -20,7 +20,7 @@
     
     /* buttons */
     .button{
-        /* line-height: 44px; */
+        line-height: 44px;
         font-size: 18px;
         padding: 0 16px;
         text-align: center;
@@ -152,7 +152,7 @@
     }
     .card-wrapper *{
        /* border: 1px solid black; */
-       padding: 20px;
+       /* padding: 20px; */
     }
     .col-12{
         flex-basis: calc(100% / 1);
@@ -186,10 +186,11 @@
         font-size: 14px;
         margin-bottom: 40px;
     }
-    .plan-features{
+    .plan_features{
         margin-bottom: 40px;
+        margin-top: 20px;
     }
-    .plan-features .feature{
+    .plan_features .feature{
         display: flex;
         gap: 8px;
         margin-bottom: 16px;
@@ -199,13 +200,15 @@
         font-size: 14px;
     }
 
+    
+
     /* col-orizzontale */
     .card-landscape{
         display: flex;
     
     }
 
-
+ 
 
     /* terza sezione */
 
