--- a/css/app.css
+++ b/css/app.css
@@ -150,10 +150,7 @@
         justify-content: center;
         gap: 10px;
     }
-    .card-wrapper *{
-       /* border: 1px solid black; */
-       /* padding: 20px; */
-    }
+  
     .col-12{
         flex-basis: calc(100% / 1);
         border: 1px solid black;
@@ -238,23 +235,41 @@
 
     /* sezione 4  */
 
+    .row-nowrap{
+        display: flex;
+    }
+
     .card_operazioni{
         display: flex;
         flex-direction: column;
-        flex-basis: calc(100% / 3);
         padding: 18px;
     }
     .col_operazioni{
         display: flex;
+        flex-basis: calc(100% / 3);
     }
     .header-card_operazioni{
         display: flex;
         flex-direction: column;
     }
     .img_operazioni{
-        padding-bottom: 10px;
+        padding-bottom: 20px;
     }
+
 
     .card_operazioni p{
         margin-top: 30px;
     }  
+
+    .four{
+        padding-bottom: 150px;
+    }
+
+    /* quinta sezione */
+    .col_team{
+        padding:100px 178px 100px 100px;
+    }
+    .col_team a{
+        text-decoration: underline;
+        color: blue;
+    }
