--- a/css/app.css
+++ b/css/app.css
@@ -273,3 +273,24 @@
         text-decoration: underline;
         color: blue;
     }
+
+    .col_square{
+        display: flex;
+        flex-wrap: wrap;
+        flex-basis: calc(100% / 3);
+    }
+
+    .square{
+        display: flex;
+        flex-basis: calc(100% / 2);
+        aspect-ratio: 1/1;
+        justify-content: center;
+        align-items: center;
+        background-color: aquamarine;
+    }
+    .img_square{
+        width: calc(100% /2);
+        aspect-ratio: 1/1;
+        display: flex;
+    }
+    
