--- a/css/app.css
+++ b/css/app.css
@@ -27,14 +27,23 @@
     }
     
     .button_blue{
-        background-color: blue;
+        background-color: rgb(0, 97, 255);
         color: white;
+        white-space: nowrap;
     }
     
     a.button{
         display: inline-block;
+        font-size: 18px;
     }
-    
+
+    .col-12 .button-orizzontale{
+        margin: 30px;
+        font-size: 14px;
+    }
+    .button-g{
+        background-color: white;
+    }
     
     .container{
         max-width: 1000px;
@@ -126,7 +135,7 @@
         display: block;
         width: 20px;
         height: 20px;
-        border: 1px solid black;
+        border: 1px solid rgb(229, 229, 231);
         border-radius: 50%;
     }
     .radio-input{
@@ -140,11 +149,9 @@
     }
     
     /* card */
-    .card{
-        border: 1px solid black;
-    }
+
     .card_header{
-        border-bottom: 1 px solid black;
+        border-bottom: 1px solid rgb(229, 229, 231);
         padding: 13px 0;
         display: flex;
         justify-content: center;
@@ -153,7 +160,7 @@
   
     .col-12{
         flex-basis: calc(100% / 1);
-        border: 1px solid black;
+        border: 1px solid rgb(229, 229, 231);
     }
     .card-wrapper{
         gap: 50px;
@@ -162,6 +169,7 @@
     .col{
         flex-grow: 1;
         flex-basis: 0;
+        border: 1px solid rgb(229, 229, 231);
     }
     .card_body{
         padding: 32px 24px;
@@ -174,7 +182,7 @@
         margin-bottom: 20px;
     }
     .plan_price{
-        font-size: 12px;
+        font-size: 14px;
         font-weight: bold;
         margin-bottom: 16px;
     }
@@ -191,10 +199,37 @@
         display: flex;
         gap: 8px;
         margin-bottom: 16px;
+        align-items: baseline;
     }
     .card .button{
         width: 100%;
         font-size: 14px;
+    }
+ 
+    .plan_content-primary :last-child{
+        margin-top: 30px;
+        
+    }
+    .a-link{
+        color: blue;
+        text-decoration: underline;
+    }
+
+
+    .plan_content-primary::after{
+        content: "";
+        display: block;
+        width: 50px;
+        border: 1px solid rgb(229, 229, 231);
+        margin-top: 70px;
+    }
+
+
+    .plan_content-secondary p{
+        margin-top: 30px;
+    }
+    .plan_content-primary{
+        margin-bottom: 70px;
     }
 
     
@@ -203,6 +238,10 @@
     .card-landscape{
         display: flex;
     
+    }
+
+    .landscape_info{
+        padding: 30px;
     }
 
  
@@ -265,6 +304,7 @@
         padding-bottom: 150px;
     }
 
+
     /* quinta sezione */
     .col_team{
         padding:100px 178px 100px 100px;
@@ -289,9 +329,10 @@
         background-color: aquamarine;
     }
     .img_square{
-        width: calc(100% /2);
+        width: 55%;
         aspect-ratio: 1/1;
         display: flex;
+        filter: invert(1);
     }
     
 .col_text{
@@ -311,6 +352,22 @@
 .img_central::after{
     content: "";
     display: inline-block;
-    border: 2px solid black;
+    border: 1px solid rgb(213, 213, 215);
     width: 100px;
+ }
+
+
+ /* sesta sezione */
+
+ #section-blue{
+    background-color: rgb(180, 208, 231);
+    padding: 125px 0;
+ }
+.col-g p{
+    font-size: 40px;
+    font-weight: bold;
+    color: rgb(99, 17, 69);
+}
+ .row-g{
+    justify-content: space-between;
  }
