--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,8 @@
     .button-g{
         background-color: white;
     }
+
+    /* container */
     
     .container{
         max-width: 1000px;
@@ -56,6 +58,7 @@
     .row{
         display: flex;
         flex-wrap: wrap;
+       
     }
     
     /* nav */
@@ -97,7 +100,7 @@
     }
     .hero_title{
         font-size: 74px;
-        margin-bottom: 48px;
+        /* margin-bottom: 48px; */
     }
     .col-4{
         flex-basis: calc(100% / 3);
@@ -110,13 +113,21 @@
     .hero_content{
         display: flex;
         flex-direction: column;
-        gap: 30px;
+        gap: 37px;
         align-items: flex-start;
-        padding-bottom: 20px;
+        justify-content: center;
+        /* padding-bottom: 20px; */
     }
     .hero_content i{
-        margin-top: auto;
+       
         font-size: 64px;
+    }
+    .hero_thumbnail img{
+        position: relative;
+        bottom: -78px;
+    }
+    .content-p{
+        margin-top: 60px;
     }
     
      /*  seconda sezione */
@@ -282,6 +293,8 @@
 
     .row-nowrap{
         display: flex;
+        gap: 50px;
+        flex-wrap: wrap;
     }
 
     .card_operazioni{
@@ -290,24 +303,31 @@
         padding: 18px;
     }
     .col_operazioni{
-        display: flex;
-        flex-basis: calc(100% / 3);
+      flex-basis: 23%;
+      flex-grow: 1;
     }
     .header-card_operazioni{
-        display: flex;
-        flex-direction: column;
-    }
-    .img_operazioni{
-        padding-bottom: 20px;
+     margin-bottom: 28px;
     }
 
+    .card_operazioni-title{
+    font-size: 24px;
+}
 
-    .card_operazioni p{
-        margin-top: 30px;
-    }  
+    .body-card_operazioni{
+    font-size: 16px;
+}
+
+    .four .section_title{
+    margin-bottom: 20px;
+}
 
     .four{
         padding-bottom: 150px;
+    }
+
+    .four figure{
+        margin-bottom: 15px;
     }
 
 
@@ -323,51 +343,68 @@
     .col_square, .col_text{
         display: flex;
         flex-wrap: wrap;
-        flex-basis: calc(100% / 3);
-        aspect-ratio: 1/1;
+        flex-basis: 0;
+        flex-grow: 1;
+        /* flex-basis: calc(100% / 3); */
     }
 
     .square{
         display: flex;
         flex-basis: calc(100% / 2);
-        aspect-ratio: 1/1;
-        justify-content: center;
+         justify-content: center;
         align-items: center;
-        background-color: aquamarine;
+       
+        
     }
     .img_square{
-        width: 55%;
-        aspect-ratio: 1/1;
-        display: flex;
-        filter: invert(1);
-    }
-    .logo-box{
         display: flex;
         aspect-ratio: 1/1;
         justify-content: center;
         align-items: center;
     }
+    .logo-box{
+        /* display: flex;
+        aspect-ratio: 1/1;
+        justify-content: center;
+        align-items: center; */
+        width: 55%;
+        filter: invert(1);
+    }
     
+
+
+
 .col_text{
-    padding: 40px;
+    padding: 46px;
     background-color: rgb(245, 245, 245);
+    
 }
-.col_text img{
-    width: 50%;
-    /* margin-bottom: 35px; */
-}
-.img_central{
-    padding-bottom: 50px;
-}
-.col_text p{
-    margin-bottom: 50px;
-}
-.img_central::after{
+.slide_quote::before{
     content: "";
-    display: inline-block;
-    border: 1px solid rgb(213, 213, 215);
-    width: 100px;
+    display: block;
+    width: 110px;
+    height: 1px;
+    background-color: #BBBBBB;
+}
+
+ .slide_logo img, .slide_logo{
+    max-height: 60px;
  }
+
+ .slide_quote{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
+ }
+
+ .slide_logo{
+    margin-bottom: 40px;
+ }
+
+
+
+
 
 
  /* sesta sezione */
@@ -396,7 +433,7 @@
     justify-content: space-between;
     flex-basis: 100%;
     font-weight: bold;
-    gap: 100px;
+    gap: 50px;
     /* padding: 39px 0; */
     /* flex-direction: column; */
 }
@@ -408,12 +445,23 @@
 .faq{
     margin-bottom: 150px;
 }
+.row-list i {
+    margin-right:20px;
+}
 
 
 .border-container{
     border-top: 1px solid #BBBBBB;
     border-bottom: 1px solid #BBBBBB;
     padding: 50px 0;
+}
+
+.border-row::before{
+    content: "";
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color:#BBBBBB;
 }
 
 
@@ -464,6 +512,8 @@
 .border-prova::before{
     content: "";
     display: block;
-    border: 1px solid rgb(187, 187, 187);
+    /* border: 1px solid rgb(187, 187, 187); */
     width: 140px;
+    height: 1px;
+    background-color: rgb(187, 187, 187);
 }
